--- a/Cap.html
+++ b/Cap.html
@@ -22,14 +22,14 @@
             background-color: rgba(17, 17, 17, 0.8);
             padding: 10px 20px;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
+            flex-direction: column; /* Organiza o cabeçalho em coluna */
+            align-items: center; /* Alinha os itens ao centro */
         }
         /* Contêiner do logotipo */
         .logo-container {
             display: flex;
             align-items: center;
+            flex-direction: column; /* Organiza o logotipo e o slogan em coluna */
         }
         /* Link do logotipo */
         .logo-container a {
@@ -52,18 +52,18 @@
         }
         /* Estilo do menu de navegação */
         nav {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
+            margin-top: 10px; /* Adiciona um espaçamento acima do menu */
         }
         nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column; /* Organiza o menu verticalmente */
+            align-items: center; /* Centraliza os itens do menu horizontalmente */
         }
         nav ul li {
-            margin-left: 20px;
+            margin: 10px 0; /* Espaço acima e abaixo dos itens do menu */
         }
         nav ul li a {
             color: #fff;
@@ -86,7 +86,8 @@
             transform-origin: bottom right;
             transition: transform 0.3s ease;
         }
-        nav ul li a:hover::after {
+        nav ul li a:hover::after,
+        nav ul li a.active::after {
             transform: scaleX(1);
             transform-origin: bottom left;
         }
@@ -150,6 +151,22 @@
         .additional-info ul li {
             font-size: 1.2em;
             margin-bottom: 10px;
+        }
+
+        /* Consultas de mídia para dispositivos menores */
+        @media (max-width: 768px) {
+            .logo {
+                font-size: 2em; /* Ajusta o tamanho da fonte do logotipo em telas menores */
+            }
+            .tagline {
+                font-size: 0.9em; /* Ajusta o tamanho da fonte do slogan em telas menores */
+            }
+            .product-details h1 {
+                font-size: 2em; /* Ajusta o tamanho da fonte do título em telas menores */
+            }
+            .product-details p {
+                font-size: 1em; /* Ajusta o tamanho da fonte do parágrafo em telas menores */
+            }
         }
     </style>
 </head>
