--- a/Support.html
+++ b/Support.html
@@ -20,13 +20,13 @@
             background-color: #111; /* Cor de fundo do cabeçalho */
             padding: 10px 20px; /* Espaçamento interno do cabeçalho */
             display: flex; /* Usa flexbox para layout */
-            justify-content: space-between; /* Espaço igual entre itens */
-            align-items: center; /* Alinha itens verticalmente ao centro */
-            position: relative; /* Posiciona o cabeçalho relativamente ao fluxo normal */
+            flex-direction: column; /* Organiza o cabeçalho em coluna */
+            align-items: center; /* Alinha itens ao centro */
         }
         .logo-container {
             display: flex; /* Usa flexbox para layout interno */
             align-items: center; /* Alinha itens verticalmente ao centro */
+            flex-direction: column; /* Organiza o logotipo e o slogan em coluna */
         }
         .logo-container a {
             display: flex; /* Usa flexbox para layout */
@@ -45,18 +45,18 @@
             font-style: italic; /* Estilo em itálico */
         }
         nav {
-            position: absolute; /* Posiciona o menu de navegação absolutamente dentro do cabeçalho */
-            left: 50%; /* Alinha horizontalmente ao centro */
-            transform: translateX(-50%); /* Ajusta a posição para o centro exato */
+            margin-top: 10px; /* Adiciona um espaçamento acima do menu */
         }
         nav ul {
             list-style: none; /* Remove os marcadores de lista */
             margin: 0; /* Remove a margem */
             padding: 0; /* Remove o preenchimento */
             display: flex; /* Usa flexbox para layout */
+            flex-direction: column; /* Alinha o menu verticalmente */
+            align-items: center; /* Centraliza os itens do menu horizontalmente */
         }
         nav ul li {
-            margin-left: 20px; /* Espaço à esquerda dos itens do menu */
+            margin: 10px 0; /* Espaço acima e abaixo dos itens do menu */
         }
         nav ul li a {
             color: #fff; /* Cor do texto dos links do menu */
@@ -87,6 +87,29 @@
         .content {
             padding: 20px; /* Espaçamento interno do conteúdo */
             text-align: center; /* Alinha o texto ao centro */
+        }
+        .content h1 {
+            font-size: 2.5em; /* Tamanho da fonte do título */
+            margin-bottom: 20px; /* Espaço abaixo do título */
+        }
+        .content p {
+            font-size: 1.2em; /* Tamanho da fonte do parágrafo */
+        }
+
+        /* Consultas de mídia para dispositivos menores */
+        @media (max-width: 768px) {
+            .logo {
+                font-size: 2em; /* Ajusta o tamanho da fonte do logotipo em telas menores */
+            }
+            .tagline {
+                font-size: 0.9em; /* Ajusta o tamanho da fonte do slogan em telas menores */
+            }
+            .content h1 {
+                font-size: 2em; /* Ajusta o tamanho da fonte do título em telas menores */
+            }
+            .content p {
+                font-size: 1em; /* Ajusta o tamanho da fonte do parágrafo em telas menores */
+            }
         }
     </style>
 </head>
