--- a/Sweatshirt.html
+++ b/Sweatshirt.html
@@ -12,19 +12,19 @@
             padding: 0;
             color: #fff;
             font-family: 'Arial', sans-serif;
-            background-color: #111;
+            background-color: #111; /* Cor de fundo preta */
         }
         header {
             background-color: rgba(17, 17, 17, 0.8);
             padding: 10px 20px;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
+            flex-direction: column; /* Organiza o cabeçalho em coluna */
+            align-items: center; /* Centraliza o conteúdo */
         }
         .logo-container {
             display: flex;
             align-items: center;
+            flex-direction: column; /* Organiza o logotipo e o slogan em coluna */
         }
         .logo-container a {
             display: flex;
@@ -43,18 +43,18 @@
             font-style: italic;
         }
         nav {
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
+            margin-top: 10px; /* Adiciona espaçamento acima do menu */
         }
         nav ul {
             list-style: none;
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column; /* Organiza o menu verticalmente */
+            align-items: center; /* Centraliza os itens do menu horizontalmente */
         }
         nav ul li {
-            margin-left: 20px;
+            margin: 10px 0; /* Espaço acima e abaixo dos itens do menu */
         }
         nav ul li a {
             color: #fff;
@@ -77,7 +77,8 @@
             transform-origin: bottom right;
             transition: transform 0.3s ease;
         }
-        nav ul li a:hover::after {
+        nav ul li a:hover::after,
+        nav ul li a.active::after {
             transform: scaleX(1);
             transform-origin: bottom left;
         }
@@ -120,10 +121,35 @@
             margin-top: 20px;
             font-size: 1em;
         }
+        .material-info ul {
+            list-style-type: disc;
+            padding-left: 20px;
+        }
+        .material-info ul li {
+            font-size: 1.2em;
+            margin-bottom: 10px;
+        }
+
+        /* Consultas de mídia para dispositivos menores */
+        @media (max-width: 768px) {
+            .logo {
+                font-size: 2em; /* Ajusta o tamanho da fonte do logotipo em telas menores */
+            }
+            .tagline {
+                font-size: 0.9em; /* Ajusta o tamanho da fonte do slogan em telas menores */
+            }
+            .product-details h1 {
+                font-size: 2em; /* Ajusta o tamanho da fonte do título em telas menores */
+            }
+            .product-details p {
+                font-size: 1em; /* Ajusta o tamanho da fonte do parágrafo em telas menores */
+            }
+        }
     </style>
 </head>
 <body>
     <header>
+        <!-- Contêiner do logotipo -->
         <div class="logo-container">
             <a href="index.html">
                 <img src="YWF.png" alt="YWF Logo" style="height: 5.5em; width: auto;">
@@ -133,6 +159,7 @@
                 </div>
             </a>
         </div>
+        <!-- Menu de navegação -->
         <nav>
             <ul>
                 <li><a href="Site.html">Home</a></li>
