--- a/shop.html
+++ b/shop.html
@@ -22,14 +22,14 @@
             background-color: #111; /* Cor de fundo do cabeçalho */
             padding: 10px 20px; /* Espaçamento interno do cabeçalho */
             display: flex; /* Usa flexbox para layout */
-            justify-content: space-between; /* Espaço igual entre itens */
-            align-items: center; /* Alinha itens verticalmente ao centro */
-            position: relative; /* Posiciona o cabeçalho relativamente ao fluxo normal */
+            flex-direction: column; /* Organiza o cabeçalho em coluna */
+            align-items: center; /* Alinha os itens ao centro */
         }
         /* Contêiner do logotipo */
         .logo-container {
             display: flex; /* Usa flexbox para layout interno */
             align-items: center; /* Alinha itens verticalmente ao centro */
+            flex-direction: column; /* Organiza o logotipo e o slogan em coluna */
         }
         /* Link do logotipo */
         .logo-container a {
@@ -52,18 +52,18 @@
         }
         /* Estilo do menu de navegação */
         nav {
-            position: absolute; /* Posiciona o menu de navegação absolutamente dentro do cabeçalho */
-            left: 50%; /* Alinha horizontalmente ao centro */
-            transform: translateX(-50%); /* Ajusta a posição para o centro exato */
+            margin-top: 10px; /* Adiciona um espaçamento acima do menu */
         }
         nav ul {
             list-style: none; /* Remove os marcadores de lista */
             margin: 0; /* Remove a margem */
             padding: 0; /* Remove o preenchimento */
             display: flex; /* Usa flexbox para layout */
+            flex-direction: column; /* Alinha o menu verticalmente */
+            align-items: center; /* Centraliza os itens do menu horizontalmente */
         }
         nav ul li {
-            margin-left: 20px; /* Espaço à esquerda dos itens do menu */
+            margin: 10px 0; /* Espaço acima e abaixo dos itens do menu */
         }
         nav ul li a {
             color: #fff; /* Cor do texto dos links do menu */
@@ -158,6 +158,23 @@
         }
         .product .button:hover {
             background-color: #444; /* Cor de fundo do botão ao passar o mouse */
+        }
+
+        /* Consultas de mídia para dispositivos menores */
+        @media (max-width: 768px) {
+            .logo {
+                font-size: 2em; /* Ajusta o tamanho da fonte do logotipo em telas menores */
+            }
+            .tagline {
+                font-size: 0.9em; /* Ajusta o tamanho da fonte do slogan em telas menores */
+            }
+            .content h1 {
+                font-size: 2em; /* Ajusta o tamanho da fonte do título em telas menores */
+            }
+            .products {
+                flex-direction: column; /* Organiza os produtos em uma coluna em telas menores */
+                align-items: center; /* Centraliza os produtos horizontalmente */
+            }
         }
     </style>
 </head>
