--- a/shop.html
+++ b/shop.html
@@ -224,7 +224,26 @@
                     <button class="button">Add to Cart</button>
                 </div>
             </div>
-            <!-- Adicione mais produtos aqui se necessário -->
+            <!-- Produto: Puffer -->
+            <div class="product">
+                <img src="puffer.png" alt="Puffer">
+                <div class="info">
+                    <h2>Puffer</h2>
+                    <p>Descrição do produto.</p>
+                    <div class="price">€99.99</div>
+                    <button class="button">Add to Cart</button>
+                </div>
+            </div>
+            <!-- Produto: T-shirt -->
+            <div class="product">
+                <img src="tshirt.png" alt="T-shirt">
+                <div class="info">
+                    <h2>T-shirt</h2>
+                    <p>Descrição do produto.</p>
+                    <div class="price">€19.99</div>
+                    <button class="button">Add to Cart</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
