--- a/tshirt.html
+++ b/tshirt.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YWF - Sweatshirt</title>
+    <title>YWF - T-shirt</title>
     <!-- Adiciona o favicon -->
     <link rel="icon" href="YWF.png" type="image/png">
     <!-- Importa a fonte Syne do Google Fonts -->
@@ -166,10 +166,10 @@
     <div class="content">
         <!-- Contêiner do produto -->
         <div class="product-container">
-            <img src="sweatshirt.png" alt="Sweatshirt" class="product-image">
-            <h1 class="product-title">YWF Sweatshirt</h1>
-            <p class="product-description">Experience the comfort and style of our YWF Sweatshirt. Perfect for any casual occasion, this sweatshirt combines warmth and fashion effortlessly. Available in various sizes and colors.</p>
-            <div class="product-price">€49.99</div>
+            <img src="tshirt.png" alt="T-shirt" class="product-image">
+            <h1 class="product-title">YWF T-shirt</h1>
+            <p class="product-description">Our classic YWF T-shirt is made from 100% organic cotton, providing comfort and style while supporting sustainability. Perfect for everyday wear.</p>
+            <div class="product-price">€24.99</div>
             <a href="shop.html" class="buy-button">Buy Now</a>
         </div>
     </div>
