--- a/puffer.html
+++ b/puffer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YWF - Sweatshirt</title>
+    <title>YWF - Puffer</title>
     <!-- Adiciona o favicon -->
     <link rel="icon" href="YWF.png" type="image/png">
     <!-- Importa a fonte Syne do Google Fonts -->
@@ -166,10 +166,10 @@
     <div class="content">
         <!-- Contêiner do produto -->
         <div class="product-container">
-            <img src="sweatshirt.png" alt="Sweatshirt" class="product-image">
-            <h1 class="product-title">YWF Sweatshirt</h1>
-            <p class="product-description">Experience the comfort and style of our YWF Sweatshirt. Perfect for any casual occasion, this sweatshirt combines warmth and fashion effortlessly. Available in various sizes and colors.</p>
-            <div class="product-price">€49.99</div>
+            <img src="puffer.png" alt="Puffer" class="product-image">
+            <h1 class="product-title">YWF Puffer Jacket</h1>
+            <p class="product-description">Stay warm and stylish with our YWF Puffer Jacket. Designed for ultimate comfort and protection against the cold, this jacket is perfect for winter. Available in multiple sizes.</p>
+            <div class="product-price">€89.99</div>
             <a href="shop.html" class="buy-button">Buy Now</a>
         </div>
     </div>
