--- a/Sweatshirt.html
+++ b/Sweatshirt.html
@@ -170,7 +170,7 @@
             <h1 class="product-title">YWF Sweatshirt</h1>
             <p class="product-description">Experience the comfort and style of our YWF Sweatshirt. Perfect for any casual occasion, this sweatshirt combines warmth and fashion effortlessly. Available in various sizes and colors.</p>
             <div class="product-price">€49.99</div>
-            <a href="shop.html" class="buy-button">Buy Now</a>
+            <a href="purchase.html" class="buy-button">Buy Now</a>
         </div>
     </div>
 
