--- a/puffer.html
+++ b/puffer.html
@@ -170,7 +170,7 @@
             <h1 class="product-title">YWF Puffer Jacket</h1>
             <p class="product-description">Stay warm and stylish with our YWF Puffer Jacket. Designed for ultimate comfort and protection against the cold, this jacket is perfect for winter. Available in multiple sizes.</p>
             <div class="product-price">€89.99</div>
-            <a href="shop.html" class="buy-button">Buy Now</a>
+            <a href="purchase.html" class="buy-button">Buy Now</a>
         </div>
     </div>
 
