--- a/tshirt.html
+++ b/tshirt.html
@@ -170,7 +170,7 @@
             <h1 class="product-title">YWF T-shirt</h1>
             <p class="product-description">Our classic YWF T-shirt is made from 100% organic cotton, providing comfort and style while supporting sustainability. Perfect for everyday wear.</p>
             <div class="product-price">€24.99</div>
-            <a href="shop.html" class="buy-button">Buy Now</a>
+            <a href="purchase.html" class="buy-button">Buy Now</a>
         </div>
     </div>
 
