--- a/history.html
+++ b/history.html
@@ -177,14 +177,14 @@
         <!-- Texto sobre a história da marca -->
         <div class="history-text">
             <p>
-                YWF, que significa "Young Wild Free", foi fundada em 2020 com a visão de criar uma marca de streetwear que fosse mais do que apenas roupas. Nascida da paixão por moda urbana e um desejo de expressar individualidade, YWF rapidamente se tornou um símbolo de estilo e atitude. Desde o início, nosso objetivo foi oferecer peças que não apenas parecessem bem, mas que também transmitissem uma mensagem de liberdade e autenticidade.
+                YWF, which stands for "Young Wild Free," was founded in 2020 with the vision of creating a streetwear brand that was more than just clothing. Born from a passion for urban fashion and a desire to express individuality, YWF quickly became a symbol of style and attitude. From the beginning, our goal has been to offer pieces that not only look great but also convey a message of freedom and authenticity.
             </p>
             <p>
-                Cada coleção da YWF é projetada com atenção aos detalhes e um compromisso com a qualidade. Trabalhamos com designers e artistas inovadores para garantir que nossos produtos sejam únicos e representem a verdadeira essência da moda streetwear. Ao longo dos anos, a YWF evoluiu e cresceu, mas nosso núcleo permanece o mesmo: celebrar a individualidade e a liberdade de expressão.
+                Each YWF collection is designed with attention to detail and a commitment to quality. We work with innovative designers and artists to ensure our products are unique and represent the true essence of streetwear fashion. Over the years, YWF has evolved and grown, but our core remains the same: to celebrate individuality and freedom of expression.
             </p>
             <p>
-                Ao olharmos para o futuro, continuamos a nos esforçar para oferecer roupas que inspirem e conectem pessoas ao redor do mundo. Obrigado por fazer parte da nossa jornada e por apoiar uma marca que acredita na expressão autêntica e na liberdade de ser quem você é.
-            </p>
+                As we look to the future, we continue to strive to offer clothing that inspires and connects people around the world. Thank you for being part of our journey and for supporting a brand that believes in authentic expression and the freedom to be who you are.
+            </p>            
         </div>
         <!-- Imagem ilustrativa da história da marca -->
         <img src="HistoryImage.jpg" alt="Brand History" class="history-image">
